--- a/Backtracking/Backtracking.vcxproj.filters
+++ b/Backtracking/Backtracking.vcxproj.filters
@@ -47,5 +47,41 @@
     <ClInclude Include="combinari.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProdusCartezian.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="backtracking-in-plan-4-directii.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="backtracking-in-plan-8-directii.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="9.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="13.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="14.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="in.txt" />
   </ItemGroup>
 </Project>
